[gd_scene load_steps=4 format=3 uid="uid://cwjqm88bs7exc"]

[ext_resource type="Script" path="res://Scripts/Projectile.gd" id="1_xpupl"]

[sub_resource type="BoxMesh" id="BoxMesh_lb5o8"]
size = Vector3(0.1, 0.1, 0.3)

[sub_resource type="BoxShape3D" id="BoxShape3D_3stxj"]
size = Vector3(0.1, 0.1, 0.3)

[node name="DaggerProjectile" type="Area3D"]
collision_layer = 0
collision_mask = 4
script = ExtResource("1_xpupl")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_lb5o8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_3stxj")

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
